--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ const RonUngerAnalysis = () => {
           <div>
             <h1 className="text-3xl font-bold text-gray-800">Ron Unger</h1>
             <p className="text-lg text-gray-600">Right Back • Maccabi Bnei Raina • Age 23</p>
-            <p className="text-sm text-gray-500">Ranked #91 out of defensive players</p>
+            <p className="text-sm text-gray-500">Ranked #91 in broader dataset • Position in this file: Near bottom</p>
           </div>
           <div className="text-right">
             <div className="text-2xl font-bold text-blue-600">{ronUnger.gamesPlayed} Games</div>
