--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@ const RonUngerAnalysis = () => {
             </ul>
           </div>
           <div>
-            <h4 className="font-semibmaterial text-gray-800 mb-2">Development Areas</h4>
+            <h4 className="font-semibold text-gray-800 mb-2">Development Areas</h4>
             <ul className="text-sm text-gray-600 space-y-2">
               <li>• Focus on tackle technique and timing</li>
               <li>• Improve aggressive defensive actions</li>
